--- a/Views/Shared/Components/FooterTopics/Default.cshtml
+++ b/Views/Shared/Components/FooterTopics/Default.cshtml
@@ -77,7 +77,7 @@
 
     <!-- Right: Custom Content Section -->
     <div class="col-lg-6 text-center">
-        <h3>पर्वत पीयूष न्यूज </h3>
+        <h3 class="text-center">पर्वत पीयूष न्यूज </h3>
         <p>यह एक समाचार पोर्टल है जो सत्य और निष्पक्ष खबरों के लिए समर्पित है।</p>
         <p>आप हमारे सोशल मीडिया चैनलों पर भी हमें फॉलो कर सकते हैं।</p>
         <p>हमसे संपर्क करने के लिए नीचे दिए गए ईमेल का उपयोग करें।</p>
