--- a/Views/Author/CreateNews.cshtml
+++ b/Views/Author/CreateNews.cshtml
@@ -25,13 +25,18 @@
         <label>Title</label>
         <input type="text" name="Title" class="form-control" required />
     </div>
+    @* <div class="form-group"> *@
+    @*     <label>Content</label> *@
+    @*     <textarea name="Content" class="form-control" required></textarea> *@
+    @* </div> *@
     <div class="form-group">
-        <label>Content</label>
-        <textarea name="Content" class="form-control" required></textarea>
+        <label asp-for="Content" class="control-label"></label>
+        <textarea asp-for="Content" class="form-control" rows="6"></textarea>
+        <span asp-validation-for="Content" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label>Author</label>
-        <input type="text" name="Author" class="form-control" required />
+        <input type="text" name="Author" class="form-control" />
     </div>
     <div class="form-group">
         <label>Upload Image</label>
