--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -24,7 +24,7 @@
 <div class="container mt-4">
     <div class="row">
         <!-- Left Content Area (News Content) -->
-        <div class="col-lg-8">
+        <div class="col-lg-12">
             <!-- Heading -->
             <h2 class="fw-bold">@Model.Title</h2>
 
@@ -32,15 +32,18 @@
             <p class="text-muted">@Model.PublishedDate.ToString("dd MMM yyyy")</p>
 
             <!-- Full Image -->
-            <img src="@Model.ImagePath" alt="News Image" class="img-fluid my-3" style="width: 100%; height: auto;" />
+            @* <img src="@Model.ImagePath" alt="News Image" class="img-fluid my-3" style="width: 100%; height: auto;" /> *@
+            <img src="@Model.ImagePath" alt="News Image" style="width: 100%;height: auto;" />
 
             <!-- Content -->
-            <p class="fs-5">@Model.Content</p>
+            @* <p class="fs-5">@Model.Content</p> *@
+            <div class="news-body" style="white-space: pre-line;">
+                @Model.Content
+            </div>
 
             <!-- Social Media Icons -->
             <div class="my-4">
                 <a href="#" class="text-primary me-3"><i class="bi bi-facebook fs-4"></i></a>
-                <a href="#" class="text-info me-3"><i class="bi bi-twitter-x fs-4"></i></a>
                 <a href="#" class="text-danger me-3"><i class="bi bi-instagram fs-4"></i></a>
                 <a href="#" class="text-dark"><i class="bi bi-whatsapp fs-4"></i></a>
             </div>
@@ -82,6 +85,7 @@
                 </div>
     </div>
         <!-- Right Ad Area -->
+        @*
                         <div class="col-lg-4">
                             <div class="sticky-top" style="top: 20px;">
                                 <div class="card">
@@ -89,9 +93,10 @@
                                         @* <h5 class="card-title">Advertisement</h5> *@
                                         @* <img src="~/images/ad-placeholder.jpg" alt="Ad" class="img-fluid" /> *@
                                         @* <p class="mt-2 text-muted">Ad space for promotion</p> *@
-                                    </div>
+  @*                           </div>
                                 </div>
                             </div>
                         </div>
+            *@
 </div>
 </div>
