--- a/Views/Home/Topic.cshtml
+++ b/Views/Home/Topic.cshtml
@@ -48,11 +48,11 @@
 <div class="container mt-4">
     <div class="row">
         <!-- Left Content Area: News Cards -->
-        <div class="col-lg-8">
+        <div class="col-lg-12">
             <div class="row">
                 @foreach (var news in Model)
                 {
-                    <div class="col-md-6 mb-4">
+                    <div class="col-lg-4 mb-4">
                         <div class="card h-100 shadow-sm">
                             <div class="position-relative">
                                 <img src="@news.ImagePath" class="card-img-top" style="height: 200px; object-fit: cover;" alt="News Image" />
@@ -109,18 +109,19 @@
         </div>
 
         <!-- Right Ad Section -->
-        <div class="col-lg-4">
+@*        <div class="col-lg-4">
             <div class="sticky-top" style="top: 20px;">
                 <div class="card mb-4">
                     <div class="card-body text-center">
                         @* <h5 class="card-title">Advertisement</h5> *@
                         @* <img src="~/images/ad-placeholder.jpg" alt="Ad" class="img-fluid" /> *@
                         @* <p class="mt-2 text-muted">Your Ad here</p> *@
-                    </div>
+ @*                   </div>
                 </div>
             </div>
+
         </div>
-    </div>
+*@    </div>
 </div>
 
 
