--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -311,7 +311,17 @@ h3{
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
-
+.slider-image {
+    width: 100%;
+    height: 450px; 
+    object-fit: cover; 
+    object-position: center; 
+}
+.slider-caption, .content-overlay {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
 .slider {
     display: flex;
@@ -540,6 +550,9 @@ h3{
 .carousel-control-next-icon, .carousel-control-prev-icon {
     background-color: black !important;
 }
+.carousel-caption h5, .carousel-caption p {
+    margin: 0;
+}
     .card-title {
 /*    position: relative;*/
 /*    padding: 5px 15px;*/
@@ -581,8 +594,8 @@ img.img-fluid.rounded-start {
 
 
 .fixed-height {
-    width: 100%;
-    height: 110px; 
+/*    width: 100%;*/
+    height: 350px; 
     object-fit: cover; 
 }
 
@@ -628,10 +641,10 @@ img.img-fluid.rounded-start {
 }
 
 /* Ensure slider images fill their container */
-#newsSlider img {
+/*#newsSlider img {
     height: 100%;
     object-fit: fill;
-}
+}*/
 
 .card-overlay {
     position: relative;
@@ -699,4 +712,9 @@ img.img-fluid.rounded-start {
 }
 marquee a:hover {
     text-decoration: underline;
+}
+
+.topic-image {
+    width: 300px !important;
+    height: auto !important;
 }
